Load top stories, filter and store blacklist.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <script src="vendor/HTML.min.js"></script>
+  <script src="vendor/javascript-debounce.min.js"></script>
 </head>
 <body>
+  <div id="splash" class="loadingSplash">loading...</div>
+  <div id="stories"></div>
+  <textarea id="blacklist"></textarea>
+
   <script src="app.js"></script>
 </body>
 </html>
