Update blacklist placeholder for domain filtering.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="stories">
   </div>
   <div id="blacklist">
-    <textarea placeholder="Case insensitive phrases to filter out -- such as 'Apple' or 'Mark Zuckerberg'. Refresh to see changes. Auto saved to browser's local storage."></textarea>
+    <textarea placeholder="Case insensitive phrases to filter out -- such as 'Apple' or 'Mark Zuckerberg'. Prefix with 'site:' to filter out domains. Refresh to see changes. Auto saved to browser's local storage."></textarea>
   </div>
 
   <script src="app.js"></script>
