--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
 
   <link rel="stylesheet" href="vendor/normalize.min.css">
@@ -13,7 +14,7 @@
 <body>
   <div id="nav">
     <span id="brand">
-      Hacker News <i class="diet">diet</i>
+      <i class="diet">diet</i> Hacker News
     </span>
     <a href="//github.com/francium/hn-diet">source</a>
   </div>
