Load gif from GitHub and add about page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>diet Hacker New</title>
 
   <link rel="stylesheet" href="vendor/normalize.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,9 +14,14 @@
 <body>
   <div id="nav">
     <span id="brand">
-      <i class="diet">diet</i> Hacker News
+      <a href="/">
+        <i class="diet">diet</i> Hacker News
+      </a>
     </span>
-    <a href="//github.com/francium/hn-diet">source</a>
+    <div class="nav-links">
+      <a href="about.html">about</a>
+      <a href="//github.com/francium/hn-diet">source</a>
+    </div>
   </div>
 
   <div id="splash" class="loadingSplash">loading...</div>
@@ -41,5 +46,7 @@
       </p>
     </div>
   </noscript>
+
+  <img src="https://raw.githubusercontent.com/francium/hn-diet/master/res/empty.gif">
 </body>
 </html>
