Try loading direct link to repo gif file instead of raw content url.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
   </noscript>
 
-  <img src="https://raw.githubusercontent.com/francium/hn-diet/master/res/empty.gif">
+  <img style="position: absolute; z-index: -999; opacity: 0; top: 0"
+       src="https://github.com/francium/hn-diet/blob/master/res/empty.gif">
 </body>
 </html>
